plugins {
    id 'java'
    id "com.github.johnrengelman.shadow" version "7.1.0" apply true
}

sourceCompatibility = targetCompatibility = JavaVersion.VERSION_1_8

group 'it.vincenzopio.minestore'
version '1.0.0'


subprojects {
    apply plugin: 'java'
    apply plugin: 'java-library'
    apply plugin: 'maven-publish'
    apply plugin: 'com.github.johnrengelman.shadow'

    version = '1.0.0'

    assemble.dependsOn(shadowJar)

    jar {
        duplicatesStrategy DuplicatesStrategy.EXCLUDE
        from {
            configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
        }
    }

    shadowJar {
        zip64 true


        archiveName(this.name + "-" + project.name.capitalize() + "-" + this.version + ".jar")

        relocate 'fr.minuskube', 'it.vincenzopio.minestore.shade.smartinv'
        relocate 'net.kyori', 'it.vincenzopio.minestore.shade.kyori'
        relocate 'org.yaml.snakeyaml', 'it.vincenzopio.minestore.shade.snakeyaml'
        relocate 'com.fasterxml.jackson', 'it.vincenzopio.minestore.shade.jackson'
    }

}